# KathaGPT

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  start-dev.sh  tsconfig.json  vite.config.ts
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: build-installers.yml  e2e.yml  release.yml  rust.yml  website.yml
docs/: LOCAL_EDITION_FEATURES.md  LOCAL_EDITION_MIGRATION_PLAN.md
locales/: en.json
migrations/: 001_initial.sql
scripts/: install-macos.sh  setup-github.sh
src/: index.css  main.tsx  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: api-server.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  crypto.rs  lib.rs  main.rs
src-tauri/src/api/: messages.rs
src-tauri/src/db/: import.rs  mod.rs
src-tauri/src/db/repos/: artifacts.rs  chats.rs  data_export.rs  messages.rs  mod.rs  provider_keys.rs  user_profile.rs  workflows.rs
src-tauri/src/llm/: image_gen.rs  mod.rs  models.rs  openrouter.rs  provider_models.rs  research.rs  router.rs  stream.rs  translate.rs
src-tauri/src/models/: mod.rs
src-tauri/src/server/: mod.rs
src/assets/: chat-bot-show-process.json
src/context/: organization.tsx
src/lib/: ModelIcon.tsx  i18n.ts
src/pages/: _app.tsx  chats.[chatId].tsx  index.tsx  onboarding.tsx  settings.tsx  workflows.tsx
test/: README.md
test/e2e/: api-keys.spec.ts  delete-chat.spec.ts  fixtures.ts  (+5 more)
website/: .env.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
(+159 files in other folders)
