[package]
name = "kathagpt-local"
version = "0.1.0"
description = "KathaGPT Local Edition — private AI chat on your machine"
authors = ["KathaGPT Contributors"]
edition = "2021"
rust-version = "1.77"
default-run = "kathagpt-local"

[features]
default = []
api-server-cli = []

# Dev-only API server — use [[example]] so Tauri does not bundle it into KathaGPT.app
[[example]]
name = "api-server"
path = "examples/api-server.rs"
required-features = ["api-server-cli"]

[lib]
name = "kathagpt_local_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
keyring = "3"
pdf-extract = "0.10"
printpdf = "0.7"
rfd = "0.15"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
